--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webrefapp",
-  "version": "0.0.1",
+  "name": "api_react",
+  "version": "0.1.0",
   "private": true,
   "main": "main.js",
   "scripts": {
@@ -11,31 +11,22 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "cross-blob": "^1.2.0",
+    "cookie-parser": "^1.4.5",
     "debug": "~4.1.1",
-    "ejs": "^3.0.1",
-    "ejs-lint": "^1.1.0",
-    "electron-rebuild": "^1.10.0",
-    "express": "~4.17.1",
-    "filereader": "^0.10.3",
-    "http-errors": "~1.7.3",
-    "jquery": "^3.5.0",
-    "morgan": "~1.9.1",
+    "electron-rebuild": "^1.11.0",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
-    "node-html-parser": "^1.2.4",
-    "open": "^7.0.2",
-    "pug": "^2.0.4",
-    "python": "0.0.4",
+    "node-html-parser": "^1.2.20",
+    "open": "^7.1.0",
     "qs": "^6.9.4",
-    "sequelize": "^6.2.3",
+    "sequelize": "^6.3.4",
     "serve-favicon": "^2.5.0",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
-    "acorn": "^7.3.1",
-    "concurrently": "^5.2.0",
-    "electron": "^7.2.4"
+    "concurrently": "^5.3.0",
+    "electron": "^9.2.1"
   }
 }
