--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "electron-rebuild": "^1.11.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "idb": "^5.0.8",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "node-html-parser": "^1.2.20",
     "open": "^7.1.0",
     "qs": "^6.9.4",
